# chess

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  chess  cmake_install.cmake
headers/: bishop.h  board.h  cell.h  includes.h  king.h  knight.h  null.h  pawn.h  piece.h  queen.h  rook.h  templates.h  translate.h
src/: bishop.cpp  board.cpp  cell.cpp  king.cpp  knight.cpp  main.cpp  null.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp  templates.cpp  translate.cpp
